// Vitest Snapshot v1

exports[`Input Component > props.align is equal to center 1`] = `
<div
  class="t-input t-align-center"
>
  <input
    autocomplete=""
    class="t-input__inner"
    placeholder="请输入"
    type="text"
    unselectable="off"
  />
</div>
`;

exports[`Input Component > props.align is equal to left 1`] = `
<div
  class="t-input"
>
  <input
    autocomplete=""
    class="t-input__inner"
    placeholder="请输入"
    type="text"
    unselectable="off"
  />
</div>
`;

exports[`Input Component > props.align is equal to right 1`] = `
<div
  class="t-input t-align-right"
>
  <input
    autocomplete=""
    class="t-input__inner"
    placeholder="请输入"
    type="text"
    unselectable="off"
  />
</div>
`;

exports[`Input Component > props.label works fine 1`] = `
<div
  class="t-input__wrap"
>
  <div
    class="t-input t-input--prefix"
  >
    <div
      class="t-input__prefix"
    >
      <span
        class="custom-node"
      >
        TNode
      </span>
    </div>
    <input
      autocomplete=""
      class="t-input__inner"
      placeholder="请输入"
      type="text"
      unselectable="off"
    />
  </div>
</div>
`;

exports[`Input Component > props.status is equal to default 1`] = `
<div
  class="t-input"
>
  <input
    autocomplete=""
    class="t-input__inner"
    placeholder="请输入"
    type="text"
    unselectable="off"
  />
</div>
`;

exports[`Input Component > props.status is equal to error 1`] = `
<div
  class="t-input t-is-error"
>
  <input
    autocomplete=""
    class="t-input__inner"
    placeholder="请输入"
    type="text"
    unselectable="off"
  />
</div>
`;

exports[`Input Component > props.status is equal to success 1`] = `
<div
  class="t-input t-is-success"
>
  <input
    autocomplete=""
    class="t-input__inner"
    placeholder="请输入"
    type="text"
    unselectable="off"
  />
</div>
`;

exports[`Input Component > props.status is equal to warning 1`] = `
<div
  class="t-input t-is-warning"
>
  <input
    autocomplete=""
    class="t-input__inner"
    placeholder="请输入"
    type="text"
    unselectable="off"
  />
</div>
`;

exports[`Input Component > props.suffix works fine 1`] = `
<div
  class="t-input__wrap"
>
  <div
    class="t-input t-input--suffix"
  >
    <input
      autocomplete=""
      class="t-input__inner"
      placeholder="请输入"
      type="text"
      unselectable="off"
    />
    <div
      class="t-input__suffix"
    >
      <span
        class="custom-node"
      >
        TNode
      </span>
    </div>
  </div>
</div>
`;

exports[`Input Component > props.suffixIcon works fine 1`] = `
<div
  class="t-input__wrap"
>
  <div
    class="t-input t-input--suffix"
  >
    <input
      autocomplete=""
      class="t-input__inner"
      placeholder="请输入"
      type="text"
      unselectable="off"
    />
    <span
      class="t-input__suffix t-input__suffix-icon"
    >
      <span
        class="custom-node"
      >
        TNode
      </span>
    </span>
  </div>
</div>
`;

exports[`Input Component > slots.label works fine 1`] = `
<div
  class="t-input__wrap"
>
  <div
    class="t-input t-input--prefix"
  >
    <div
      class="t-input__prefix"
    >
      <span
        class="custom-node"
      >
        TNode
      </span>
    </div>
    <input
      autocomplete=""
      class="t-input__inner"
      placeholder="请输入"
      type="text"
      unselectable="off"
    />
  </div>
</div>
`;

exports[`Input Component > slots.suffix works fine 1`] = `
<div
  class="t-input__wrap"
>
  <div
    class="t-input t-input--suffix"
  >
    <input
      autocomplete=""
      class="t-input__inner"
      placeholder="请输入"
      type="text"
      unselectable="off"
    />
    <div
      class="t-input__suffix"
    >
      <span
        class="custom-node"
      >
        TNode
      </span>
    </div>
  </div>
</div>
`;

exports[`Input Component > slots.suffix-icon works fine 1`] = `
<div
  class="t-input__wrap"
>
  <div
    class="t-input t-input--suffix"
  >
    <input
      autocomplete=""
      class="t-input__inner"
      placeholder="请输入"
      type="text"
      unselectable="off"
    />
    <span
      class="t-input__suffix t-input__suffix-icon"
    >
      <span
        class="custom-node"
      >
        TNode
      </span>
    </span>
  </div>
</div>
`;

exports[`Input Component > slots.suffixIcon works fine 1`] = `
<div
  class="t-input__wrap"
>
  <div
    class="t-input t-input--suffix"
  >
    <input
      autocomplete=""
      class="t-input__inner"
      placeholder="请输入"
      type="text"
      unselectable="off"
    />
    <span
      class="t-input__suffix t-input__suffix-icon"
    >
      <span
        class="custom-node"
      >
        TNode
      </span>
    </span>
  </div>
</div>
`;
